--- a/index.html
+++ b/index.html
@@ -21,5 +21,30 @@
         </div>
     </section>
 
+    <section class="categoria">
+        <h2>Outras dicas para conseguir estabilidade financeira</h2>
+        <div class="categoria-vídeos">
+            <a href="https://www.youtube.com/watch?v=x6Ph4ub_aSI">
+                <img src="https://img.youtube.com/vi/CSSS15/maxrestdefault.jpg"/>            
+            </a>
+            
+             <a href="https://www.youtube.com/watch?v=U6hdjlgwIRQ">
+                <img src="https://img.youtube.com/vi/CSSS15/maxrestdefault.jpg"/>            
+            </a>
+
+             <a href="https://www.youtube.com/watch?v=Ys-sqTR2OYQ">
+                <img src="https://img.youtube.com/vi/CSSS15/maxrestdefault.jpg"/>            
+            </a>
+
+             <a href="https://www.youtube.com/watch?v=bidkGCz7eHM">
+                <img src="https://img.youtube.com/vi/CSSS15/maxrestdefault.jpg"/>            
+            </a>
+
+             <a href="https://www.youtube.com/watch?v=PsLKsTD4mNQ">
+                <img src="https://img.youtube.com/vi/CSSS15/maxrestdefault.jpg"/>            
+            </a>
+        </div>
+    </section>
+
 </body>
 </html>
